@@ -1,3 +1,8 @@
+2017-01-17  Jérôme Pasquier  <rainbru@free.fr>
+
+	* src/logger/Logger.cpp: document some members.
+	* src/logger/LoggerOutputFile.cpp: update doxygen documentation.
+
 2017-01-14  Jérôme Pasquier  <rainbru@free.fr>
 
 	* src/client/: change headers dates for 2017 for all sources.
